# utf16string

./: Cargo.toml  README.md
src/: iters.rs  lib.rs  macros.rs  pattern.rs  slicing.rs  str.rs  string.rs  utf16.rs  utilities.rs  wstr.rs  wstring.rs
