[package]
name = "utf16string"
version = "0.1.0"
authors = [
    "Simon Wülker <simon.wuelker@arcor.de>",
]
description = "Potentially ill-formed UTF-16 encoded string types"
readme = "README.md"
keywords = ["utf16", "string", "wstring"]
categories = ["encoding", "text-processing"]
repository = "https://github.com/simonwuelker/utf16string"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
